# compiladores

./: README.md  etapa1  lex.yy.c  makefile  scanner.l  tokens.h
etapa1/: .gitignore  exemplo.txt  exemplo2.txt  main.c  makefile  scanner.l
etapa2/: .gitignore  main.c  makefile  parser.output  parser.tab.c  parser.tab.h  parser.y  parsercopy.y  run.sh  scanner.l  teste1.txt
etapa2/testes/: asl01  asl04  asl10  asl101  asl103  asl108  asl112  asl118  asl119  asl121  asl133  asl136  asl25  asl28  asl29  asl45  asl49  asl51  asl53  asl54  asl57  asl61  asl62  asl63  asl64  asl78  asl81  asl83  asl85  asl88  asl93  asl94  asl98
etapa3/: .gitignore  ast.c  ast.h  eq2.txt  leak.txt  list.c  list.h  main.c  makefile  manual-compare.sh  parser.y  parser.y.bkp  run.sh  scanner.l  test.sh  teste1.txt  valor_lexico.c  valor_lexico.h
etapa4/: ast.c  ast.h  hash.c  hash.h  hash_stack.c  hash_stack.h  list.c  list.h  main.c  makefile  parser.y  scanner.l  semantic.c  semantic.h  valor_lexico.c  valor_lexico.h
etapa4cpp/: .gitignore  README.md  makefile
etapa4cpp/include/: ast.h  lexical_value.h  scope_stack.h  semantic_analyzer.h  symbol_table.h
etapa4cpp/src/: ast.cpp  lexical_value.cpp  main.cpp  parser.y  scanner.l  scope_stack.cpp  (+3 more)
etapa4cpp/tests/: CMakeLists.txt  runTests
etapa4cpp/tests/unit/: lexical_value.cpp  symbol_table.cpp  symbol_table_test.cpp
etapa5cpp/: .gitignore  makefile  test
etapa5cpp/tests/: CMakeLists.txt
etapa5cpp/tests/unit/: ast.cpp  scope_stack.cpp
etapa5remake/: .gitignore  test
etapa6/: .gitignore  README.md  makefile  test
(+229 files in other folders)
